<?xml version="1.0"?>
<package format="2">
  <name>boomtip_brushwood</name>
  <version>0.0.0</version>
  <description>The brushwood package</description>

  <maintainer email="hoey.alexander@gmail.com">alexander</maintainer>

  <license>Unlicense</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_perception</build_depend>
  <build_depend>roscpp</build_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
